--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<h2>hello 110.im</h2>
+<h2 id='title'></h2>
+<a href='https://github.com/ilizhu' target='_blank'>@ilizhu</a>
+<script>
+document.getElementById("h2").innerText('Hello ' + document.domain)
+</script>
