--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h2 id='title'></h2>
 <a href='https://github.com/ilizhu' target='_blank'>@ilizhu</a>
 <script>
-document.getElementById('title').innerText('Hello ' + document.domain)
+document.getElementById('title').innerText = 'Hello ' + document.domain
 </script>
